--- a/style.css
+++ b/style.css
@@ -4,10 +4,45 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url("assets/chat-icon.png");
+  background-repeat: no-repeat;
+}
+
 #text-email-login {
   top: 10%;
   font-weight: bold;
   font-size: 2rem;
   max-width: 600px;
   line-height: 1;
+}
+
+#first-text-left {
+  color: #ffffff;
+  position: absolute;
+  width: 127px;
+  height: 84px;
+  left: 126px;
+  top: 122px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 72px;
+  line-height: 84px;
+}
+
+#first-text-left-2 {
+  color: #ffffff;
+  position: absolute;
+  width: 465px;
+  height: 42px;
+  left: 128px;
+  top: 203px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 42px;
 }
