--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
   box-sizing: border-box;
 }
 
-body {
+body,
+html {
+  height: 100%;
+  margin: 0;
   background-image: url("assets/chat-icon.png");
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 #text-email-login {
@@ -17,7 +22,7 @@ body {
   line-height: 1;
 }
 
-#first-text-left {
+.first-text-left {
   color: #ffffff;
   position: absolute;
   width: 127px;
@@ -32,10 +37,10 @@ body {
   line-height: 84px;
 }
 
-#first-text-left-2 {
+.first-text-left-2 {
   color: #ffffff;
   position: absolute;
-  width: 465px;
+  width: 480px;
   height: 42px;
   left: 128px;
   top: 203px;
@@ -45,4 +50,310 @@ body {
   font-weight: 500;
   font-size: 36px;
   line-height: 42px;
+}
+
+.long-text {
+  color: #ffffff;
+  position: absolute;
+  width: 750px;
+  height: 84px;
+  left: 148px;
+  top: 784px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+}
+
+.blue-circle {
+  position: absolute;
+  width: 300px;
+  height: 268px;
+  left: 0px;
+  top: 920px;
+}
+
+.big-chat-icon {
+  background-image: url("assets/big-chat-icon.png");
+  position: absolute;
+  width: 332px;
+  height: 332px;
+  left: 350px;
+  top: 356px;
+}
+
+.vector {
+  position: absolute;
+  width: 380.03px;
+  height: 120.99px;
+}
+
+.sign-up {
+  position: absolute;
+  width: 200px;
+  height: 40px;
+  left: 1380px;
+  top: 122px;
+  background: #f2f2f2;
+  border-radius: 5px;
+}
+
+.sign-up-2 {
+  position: absolute;
+  width: 50px;
+  height: 16.8px;
+  left: 125px;
+  top: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: #353535;
+  text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+}
+
+.sign-in {
+  position: absolute;
+  width: 105px;
+  height: 40px;
+  left: 1380px;
+  top: 122px;
+  background: #29a7c2;
+  box-shadow: 0px 0px 10px rgba(47, 192, 247, 0.15);
+  border-radius: 5px;
+}
+
+#sign-in-2 {
+  color: #ffffff;
+  position: absolute;
+  width: 55px;
+  height: 16.8px;
+  left: 25px;
+  top: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  line-height: 21px;
+}
+
+#forms {
+  position: absolute;
+  width: 379px;
+  height: 593px;
+  left: 1200px;
+  top: 235px;
+  background: #ffffff;
+  box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.08);
+  border-radius: 25px;
+}
+
+.fill {
+  position: absolute;
+  width: 63px;
+  height: 94px;
+  left: 240px;
+  top: 20px;
+  background: url("assets/Provinsi-Lampung-removebg-preview\ 2.png");
+}
+
+.subtitle {
+  position: absolute;
+  width: 300px;
+  height: 47px;
+  left: 40px;
+  top: 140px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+  font-style: thin;
+  font-weight: 750;
+  font-size: 40px;
+  line-height: 56px;
+  color: #091d30;
+}
+
+input[type="text"],
+#email {
+  position: absolute;
+  width: 296px;
+  height: 50px;
+  left: 40px;
+  top: 250px;
+  padding: 12px 20px;
+  margin: 8px 0;
+
+  font-size: 18px;
+  display: inline-block;
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 4px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+}
+
+input[type="text"],
+#pw {
+  position: absolute;
+  width: 296px;
+  height: 50px;
+  left: 40px;
+  top: 310px;
+  padding: 12px 20px;
+  margin: 8px 0;
+
+  font-size: 18px;
+  display: inline-block;
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 4px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+}
+
+input[type="submit"] {
+  position: absolute;
+  margin: 8px 0;
+  width: 150px;
+  height: 46px;
+  left: 40px;
+  top: 374px;
+  border: none;
+  background: #29a7c2;
+  box-shadow: 0px 0px 10px rgba(26, 144, 230, 0.3);
+  border-radius: 4px;
+
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+  font-style: thin;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+input[type="submit"]:hover {
+  background-color: #0f768d;
+}
+
+input[type="checkbox"],
+#visibility-pw {
+  position: absolute;
+  width: 30px;
+  height: 50px;
+  left: 40px;
+  top: 330px;
+  padding: 12px 20px;
+  margin: 8px 0;
+
+  font-size: 18px;
+  display: inline-block;
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 2px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+}
+
+.forgot-password {
+  position: absolute;
+  width: 123px;
+  height: 19px;
+  left: 210px;
+  top: 394px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: medium;
+  font-size: 16px;
+  line-height: 19px;
+  text-decoration-line: underline;
+  color: #29a7c2;
+  transition: translate(-50%, -50%);
+}
+
+#copyright {
+  position: absolute;
+  width: 452px;
+  height: 38px;
+  left: 1214px;
+  top: 920px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #8b8b8b;
+}
+
+.number-of-ASN {
+  position: absolute;
+  width: 287px;
+  height: 18px;
+  left: 47px;
+  top: 540px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #091d30;
+}
+
+.popup .overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+  display: none;
+}
+
+.popup .content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  background: #ffffff;
+  width: 95%;
+  max-width: 500px;
+  height: 250px;
+  z-index: 2;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.popup .close-btn {
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 30px;
+  height: 30px;
+  background: #222;
+  color: #ffffff;
+  font-size: 25px;
+  font-weight: 600px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.popup.active .overlay {
+  display: block;
+}
+
+.popup.active .content {
+  transition: all 300ms ease-in-out;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+a {
+  text-transform: capitalize;
 }
