--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ html {
   margin: 0;
   background-image: url("assets/chat-icon.png");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center bottom;
   background-size: cover;
+  display: block;
 }
 
 #text-email-login {
@@ -196,7 +197,7 @@ input[type="text"],
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
 }
 
-input[type="text"],
+input[type="password"],
 #pw {
   position: absolute;
   width: 296px;
@@ -237,7 +238,7 @@ input[type="submit"]:hover {
   background-color: #0f768d;
 }
 
-input[type="checkbox"],
+/* input[type="checkbox"],
 #visibility-pw {
   position: absolute;
   width: 30px;
@@ -253,7 +254,7 @@ input[type="checkbox"],
   border-radius: 2px;
   box-sizing: border-box;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-}
+} */
 
 .forgot-password {
   position: absolute;
@@ -345,7 +346,7 @@ input[type="checkbox"],
   border-radius: 50%;
 }
 
-.popup.active .overlay {
+.popup .active .overlay {
   display: block;
 }
 
@@ -356,4 +357,7 @@ input[type="checkbox"],
 
 a {
   text-transform: capitalize;
+}
+
+@media screen {
 }
